--- a/src/app/account-activity/account-activity.component.html
+++ b/src/app/account-activity/account-activity.component.html
@@ -21,6 +21,10 @@
                     <th mat-header-cell *matHeaderCellDef>Amount</th>
                     <td mat-cell *matCellDef="let transaction"> {{ transaction.amount | currency }} </td>
                 </ng-container>
+                <ng-container matColumnDef="deleteAction">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let transaction"> <a [routerLink]="" (click)="deleteTransaction(transaction)">Delete</a></td>
+                </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
