--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,9 +15,9 @@
             <h2>{{ amountSpent}}</h2>
         </div>
 
-        <div class="col-md-7 order-1 order-md-1 mr-1 budgetProgress">
+        <div class="col-md-9 order-1 order-md-1 mr-1 budgetProgress">
             <div class="d-flex justify-content-between" style="margin-bottom: 25px;">
-                    <button class="ml-auto">Add Transaction</button>
+                    <button class="ml-auto" (click)="showTransactionDialog()">Add Transaction</button>
             </div>
             <div *ngFor="let budget of budgetItems">
                 <div *ngFor="let transaction of transactions">
@@ -66,6 +66,74 @@
             <span style="color:red;width:100%;padding:1em;"> {{ incomeError }} </span>
             <div class="col-12 mt-2">
                 <button style="float:right;" (click)="addIncome()" matDialogClose="yes">Add</button>
+            </div>
+        </form>
+    </div>
+  </ng-template>
+
+  <!-- Add transaction dialog -->
+<ng-template #addTransactionDialog>
+    <mat-dialog-actions align="end">
+        <i class="fa fa-window-close" mat-button matDialogClose="yes" style="font-size:32px;"></i>
+    </mat-dialog-actions>
+    <h1>Add Transaction</h1>
+    <div class="container-fluid justify-content-center" style="margin-top:25px;">
+        <form [formGroup]="transactionForm">
+            <div class="col-12">
+                Balance: {{ balance || currency }}
+            </div>
+            <div class="col-12">
+                Amount:
+            </div>
+            <div class="col-12">
+                <input type="text" formControlName="transactionAmount">
+            </div>
+            <div class="col-12">
+                Category:
+            </div>
+            <div class="col-12">
+                <input type="text" formControlName="transactionCategory">
+                <a [routerLink]="" (click)="showCategoryDialog()">Manage Categories</a>
+            </div>
+            <div class="col-12 p-2">
+                Date:
+            </div>
+            <div class="col-12">
+                <input type="date" formControlName="transactionDate">
+            </div>
+            <span style="color:red;width:100%;padding:1em;"> {{ incomeError }} </span>
+            <div class="col-12 mt-2">
+                <button style="float:right;" (click)="addIncome()" matDialogClose="yes">Add</button>
+            </div>
+        </form>
+    </div>
+  </ng-template>
+
+<!-- Manage Categories dialog -->
+<ng-template #manageCategoryDialog>
+    <mat-dialog-actions align="end">
+        <i class="fa fa-window-close" mat-button matDialogClose="yes" style="font-size:32px;"></i>
+    </mat-dialog-actions>
+    <h1>Manage Categories</h1>
+    <div class="container-fluid justify-content-center" style="margin-top:25px;">
+        <form [formGroup]="transactionForm">
+            <div class="col-12">
+                Category Name:
+            </div>
+            <div class="col-12">
+                <input type="text" formControlName="transactionAmount">
+                <button style="float:right;">Add</button>
+            </div>
+            <div class="col-12 mt-4">
+                Categories:
+            </div>
+            <div class="col-12">
+                <select>
+                    <option>test</option>
+                </select>
+            </div>
+            <div class="col-12">
+                <button style="float:right;" (click)="addIncome()" matDialogClose="yes">Remove</button>
             </div>
         </form>
     </div>
