--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,14 +1,17 @@
 .balanceInfo {
     margin-top: 25px;
     padding: 2em;
-    border: 1px solid #ccc;
+
     text-align: center;
 }
 
+.budgetContainer {
+
+}
+
 .budgetProgress {
-    margin-top: 25px;
+    margin-top: 5px;
     padding: 2em;
-    border: 1px solid #ccc;
 }
 
 h2 {
@@ -16,15 +19,15 @@ h2 {
 }
 
 .budgetItem {
-    margin-top: 5px;
+    margin-top: 10px;
     margin-bottom: 15px;
-    height: 15px;
+    height: 8px;
     width: 100%;
     border: 1px solid #ccc;
 }
 
 .budgetStatus {
-    height: 15px;
+    height: 7px;
     color:white;
     background-color: blue;
     max-width: 100%;
