--- a/src/app/account-activity/account-activity.component.html
+++ b/src/app/account-activity/account-activity.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-7 border m-5">
-            <nav aria-label="breadcrumb">
+        <div class="col-10 m-5">
+            <nav aria-label="breadcrumb" style="margin-top:-25px;margin-left:-15px;">
                 <ol class="breadcrumb" style="background-color: white;">
                   <li class="breadcrumb-item"><a href="dashboard">Dashboard</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Account Activity</li>
                 </ol>
               </nav>
             <h1>Account Activity</h1>
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 m-1" style="width:100%;">
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z0 m-1 activity" style="width:100%;">
                 <ng-container matColumnDef="date">
                     <th mat-header-cell *matHeaderCellDef>Date</th>
                     <td mat-cell *matCellDef="let transaction"> {{ transaction.date }} </td>
