--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center" style="margin-top:-25px;">
         <div class="col-md-3 order-1 order-md-1 mr-1 balanceInfo">
             <h1>Income</h1>
             <h2>{{ amountEarned }}</h2>
@@ -16,40 +16,42 @@
             <a href="manage-budget">Manage Budget</a>
         </div>
 
-        <div class="col-md-10 order-1 order-md-1 mr-1 budgetProgress">
-            <h2> {{ date | date: 'MMMM YYYY' }} Budget</h2>
-            <div class="d-flex justify-content-between" style="margin-bottom: 25px;">
+        <div class="col-md-10 order-1 order-md-1 mr-1 budgetProgress style" style="margin-top:-25px;">
+            <h1> {{ date | date: 'MMMM YYYY' }} Budget</h1>
+            <div class="d-flex justify-content-between" style="margin-top: -50px;margin-bottom:25px;">
                     <button class="ml-auto" (click)="showTransactionDialog()">Add Transaction</button>
             </div>
             <div *ngFor="let budget of budgetItems">
                 <div *ngFor="let transaction of transactions">
-                    <div *ngIf="budget.category == transaction.category">
+                    <div *ngIf="budget.category == transaction.category" class="budgetContainer">
                         <div class="col-12" style="padding:0">
                             {{budget.category}}
-                            <span style="float:right;">{{ transaction.amount | currency }} of {{ budget.amount | currency}}</span>
+                            <span style="float:right;font-size:18px;" class="money">{{ transaction.amount | currency }} of {{ budget.amount | currency}}</span>
                         </div>
                         <div class="budgetItem">
                             <div *ngIf="transaction.amount <= (budget.amount / 2)" class="budgetStatus" 
-                            style="background-color: green;" [ngStyle]="{'width' : transaction.amount / (budget.amount * 100) * 10000 + '%'}">&nbsp;</div>
+                            style="background-color: rgb(85, 194, 91);" [ngStyle]="{'width' : transaction.amount / (budget.amount * 100) * 10000 + '%'}">&nbsp;</div>
                             <div *ngIf="transaction.amount >= (budget.amount * 0.60) && transaction.amount <= (budget.amount * 0.90)" class="budgetStatus" 
-                            style="background-color: #f5f529;" [ngStyle]="{'width' : transaction.amount / (budget.amount * 100) * 10000 + '%'}">&nbsp;</div>
+                            style="background-color: rgb(85, 194, 91);" [ngStyle]="{'width' : transaction.amount / (budget.amount * 100) * 10000 + '%'}">&nbsp;</div>
                             <div *ngIf="transaction.amount >= (budget.amount * 0.90)" class="budgetStatus" 
-                                style="background-color: #bf645a;" [ngStyle]="{'width' : transaction.amount / (budget.amount * 100) * 10000 + '%'}">&nbsp;</div>
+                                style="background-color: #f3aaa1;" [ngStyle]="{'width' : transaction.amount / (budget.amount * 100) * 10000 + '%'}">&nbsp;</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row justify-content-center">
-            <div class="col-md-5 mr-1 order-1 budgetProgress">
-                <h2>Budget History</h2>
+    <div class="row" style="margin-top:-40px;">
+        <div class="col-md-1 order-1">
+        </div>
+            <div class="col-md-3 mr-1 order-1 budgetProgress">
+                <h1>Budget History</h1>
                 <select [(ngModel)]="selectedArchive" name="selectedArcive">
                     <option *ngFor="let budget of budgetHistory" [ngValue]="budget">{{ budget | date: 'MMMM YYYY' }}</option>
                 </select>
                 <button (click)="viewSelectedArchive()">View</button>
             </div>
-            <div class="col-md-5 order-1">
+            <div class="col-md-3 order-1">
             </div>
     </div>
 </div>
@@ -59,17 +61,16 @@
     <mat-dialog-actions align="end">
         <i class="fa fa-window-close" mat-button matDialogClose="yes" style="font-size:32px;"></i>
     </mat-dialog-actions>
-    <h1>Add Income</h1>
-    <div class="row justify-content-center" style="margin-top:25px;">
-
+    <h2 style="padding:.5em;margin-top:-70px;">Add Income</h2>
+    <div class="container-fluid">
         <form [formGroup]="incomeForm">
-            <div class="col-12 p-3">
+            <div class="col-12">
                 Amount:
             </div>
             <div class="col-12">
                 <input type="text" formControlName="incomeAmount">
             </div>
-            <div class="col-12 p-3">
+            <div class="col-12">
                 Date:
             </div>
             <div class="col-12">
@@ -88,7 +89,7 @@
     <mat-dialog-actions align="end">
         <i class="fa fa-window-close" mat-button matDialogClose="yes" style="font-size:32px;"></i>
     </mat-dialog-actions>
-    <h1>Add Transaction</h1>
+    <h2 style="margin-top: -50px;">Add Transaction</h2>
     <div class="container-fluid justify-content-center" style="margin-top:25px;">
         <form [formGroup]="transactionForm">
             <div class="col-12">
@@ -129,8 +130,8 @@
     <mat-dialog-actions align="end">
         <i class="fa fa-window-close" mat-button matDialogClose="yes" style="font-size:32px;"></i>
     </mat-dialog-actions>
-    <h1>Manage Categories</h1>
-    <div class="container-fluid justify-content-center" style="margin-top:25px;">
+    <h2 style="margin-top:-50px;">Manage Categories</h2>
+    <div class="container-fluid justify-content-center" style="margin-top:-25px;">
         <form>
             <div class="col-12" style="margin-top:75px;">
                 Category Name:
