--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,13 +1,13 @@
 .header {
     width: 100%;
     height: 50px;
-    background-color: green;
+    background-color: rgb(2, 73, 2);
     padding: .7em;
 }
 
 button {
-    background-color: green;
+    background-color: rgb(2, 73, 2);
     color: white;
-    border: 1px solid green;
+    border: 1px solid rgb(2, 73, 2);
     float: right;
 }
