#8 completed app registration process

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,8 @@
                 {{ errorMessage }}
             </div>
             <div class="login-issues">
-              <a [routerLink]="['/reset-password']">Can't login?</a>
+              <a [routerLink]="['/reset-password']">Can't login?</a><br>
+              <a [routerLink]="['/create-account']">Create Acount</a>
             </div>
         </div>
     </div>
