--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-html, body { height: 100%; }
-body { 
-    margin: 0; 
-    font-family: 'Metrophobic', sans-serif;
+html, body { height: 100%; margin:0 }
+body {
+    margin: 0;
 }
 
 input, select {
@@ -37,12 +36,28 @@ button {
 }
 
 h1 {
-    font-family: 'Yantramanav', sans-serif;
-    font-size: 40px;
+  font-family: 'Urbanist', sans-serif;
+  font-size: 384x;
+  letter-spacing: -1px;
+  color: rgb(90, 90, 90);
+}
+
+.budget-category {
+  font-family: 'Urbanist', sans-serif;
+  font-size: 18px;
+  color: rgb(90, 90, 90);
 }
 
 h2, .money {
-    font-family: 'Aleo', serif;
+  font-family: 'Kanit', sans-serif;
+  color: rgb(90, 90, 90);
+  font-weight: 200 !important;
+  font-size:30px;
+}
+
+.money {
+  font-weight: 200 !important;
+  font-size: 20px;
 }
 
 a {
