Improved UI, modals

--- a/src/app/budget-history/budget-history.component.html
+++ b/src/app/budget-history/budget-history.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-9 m-5">
-            <nav aria-label="breadcrumb" style="margin-top: -25px;">
+        <div class="col-11 m-5">
+            <nav aria-label="breadcrumb" style="margin-top: -25px;margin-left:-12px;">
                 <ol class="breadcrumb" style="background-color: white;padding-top:1em;">
                   <li class="breadcrumb-item"><a href="dashboard">Dashboard</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Budget History</li>
