--- a/src/styles.css
+++ b/src/styles.css
@@ -2,12 +2,14 @@
 html, body { height: 100%; margin:0 }
 body {
     margin: 0;
+    font-family: 'Urbanist', sans-serif;
+    font-weight: 400;
 }
 
 input, select {
     width: 100%;
-    font-size: 16px;
-    font-weight: 200;
+    font-size: 18px;
+    font-weight: 400;
     margin-top: 5px;
     margin-bottom: 5px;
     border: 1px solid #ccc;
@@ -23,6 +25,7 @@ button {
     border: 1px solid green;
     font-weight: 200;
     padding: .2em .6em;
+    letter-spacing: 1px;
 }
 
 .budgetTable {
@@ -38,7 +41,6 @@ button {
 h1 {
   font-family: 'Urbanist', sans-serif;
   font-size: 384x;
-  letter-spacing: -1px;
   color: rgb(90, 90, 90);
 }
 
@@ -62,4 +64,5 @@ h2, .money {
 
 a {
     color :green;
+    font-weight: 400;
 }
