--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -41,10 +41,8 @@
             </div>
         </div>
     </div>
-    <div class="row" style="margin-top:-40px;">
-        <div class="col-md-1 order-1">
-        </div>
-            <div class="col-md-3 mr-1 order-1 budgetProgress">
+    <div class="row" style="margin-top:-40px;margin-left:45px;">
+            <div class="col-md-6 mr-1 order-1 budgetProgress">
                 <h1>Budget History</h1>
                 <select [(ngModel)]="selectedArchive" name="selectedArcive">
                     <option *ngFor="let budget of budgetHistory" [ngValue]="budget">{{ budget | date: 'MMMM YYYY' }}</option>
@@ -59,10 +57,10 @@
 <!-- Add income dialog -->
 <ng-template #addIncomeDialog>
     <mat-dialog-actions align="end">
-        <i class="fa fa-window-close" mat-button matDialogClose="yes" style="font-size:32px;"></i>
+        <i class="fa fa-times" matDialogClose="yes" style="font-size:24px;margin-top:-35px;"></i>
     </mat-dialog-actions>
-    <h2 style="padding:.5em;margin-top:-70px;">Add Income</h2>
-    <div class="container-fluid">
+    <h1 style="padding:.5em .7em;margin-top:-70px;">Add Income</h1>
+    <div class="container-fluid" style="margin:0;">
         <form [formGroup]="incomeForm">
             <div class="col-12">
                 Amount:
@@ -87,10 +85,10 @@
   <!-- Add transaction dialog -->
 <ng-template #addTransactionDialog>
     <mat-dialog-actions align="end">
-        <i class="fa fa-window-close" mat-button matDialogClose="yes" style="font-size:32px;"></i>
+      <i class="fa fa-times" matDialogClose="yes" style="font-size:24px;margin-top:-35px;"></i>
     </mat-dialog-actions>
-    <h2 style="margin-top: -50px;">Add Transaction</h2>
-    <div class="container-fluid justify-content-center" style="margin-top:25px;">
+    <h1 style="padding:.5em .7em;margin-top:-70px;">Add Transaction</h1>
+    <div class="container-fluid justify-content-center" style="margin-top:15px;">
         <form [formGroup]="transactionForm">
             <div class="col-12">
                 Balance: <span style="float:right;">{{ balance || currency }}</span>
@@ -128,12 +126,12 @@
 <!-- Manage Categories dialog -->
 <ng-template #manageCategoryDialog>
     <mat-dialog-actions align="end">
-        <i class="fa fa-window-close" mat-button matDialogClose="yes" style="font-size:32px;"></i>
+      <i class="fa fa-times" matDialogClose="yes" style="font-size:24px;margin-top:-35px;"></i>
     </mat-dialog-actions>
-    <h2 style="margin-top:-50px;">Manage Categories</h2>
+    <h1 style="padding:.5em .7em;margin-top:-70px;">Manage Categories</h1>
     <div class="container-fluid justify-content-center" style="margin-top:-25px;">
         <form>
-            <div class="col-12" style="margin-top:75px;">
+            <div class="col-12" style="margin-top:25px;">
                 Category Name:
             </div>
             <div class="col-12">
