--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -8,6 +8,10 @@
 }
 
 .login-issues {
-  font-size: 12px;
+  font-size: 16px;
   margin-top: 10px !important;
+}
+
+.login a {
+  font-weight: 400 !important;
 }
