--- a/src/app/manage-budget/manage-budget.component.html
+++ b/src/app/manage-budget/manage-budget.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <div class="col-10 m-5">
+        <div class="col-11 m-5">
             <nav aria-label="breadcrumb" style="margin-top:-25px;margin-left:-15px;">
                 <ol class="breadcrumb" style="background-color: white;">
                   <li class="breadcrumb-item"><a href="dashboard">Dashboard</a></li>
@@ -44,9 +44,9 @@
 <!-- Add budget dialog -->
 <ng-template #addBudgetDialog>
   <mat-dialog-actions align="end">
-      <i class="fa fa-window-close" mat-button matDialogClose="yes" style="font-size:32px;"></i>
+    <i class="fa fa-times" matDialogClose="yes" style="font-size:24px;margin-top:-35px;"></i>
   </mat-dialog-actions>
-  <h2 style="margin-top:-50px;">Add Budget</h2>
+  <h1 style="padding:.5em .7em;margin-top:-70px;">Add Budget</h1>
   <div class="container-fluid justify-content-center">
       <form>
           <div class="col-12" style="margin-top:15px;">
@@ -73,9 +73,9 @@
 <!-- Set Income dialog -->
 <ng-template #setIncomeDialog>
   <mat-dialog-actions align="end">
-      <i class="fa fa-window-close" mat-button matDialogClose="yes" style="font-size:32px;"></i>
+    <i class="fa fa-times" matDialogClose="yes" style="font-size:24px;margin-top:-35px;"></i>
   </mat-dialog-actions>
-  <h2>Monthly Income</h2>
+  <h1 style="padding:.5em .7em;margin-top:-70px;">Income</h1>
   <div class="container-fluid justify-content-center">
       <form>
           <div class="col-12" style="margin-top:15px;">
@@ -93,9 +93,9 @@
 <!-- Manage Categories dialog -->
 <ng-template #manageCategoryDialog>
   <mat-dialog-actions align="end">
-      <i class="fa fa-window-close" mat-button matDialogClose="yes" style="font-size:32px;"></i>
+    <i class="fa fa-times" matDialogClose="yes" style="font-size:24px;margin-top:-35px;"></i>
   </mat-dialog-actions>
-  <h2 style="margin-top:-50px;">Manage Categories</h2>
+  <h1 style="padding:.5em .7em;margin-top:-70px;">Manage Categories</h1>
   <div class="container-fluid justify-content-center">
       <form>
           <div class="col-12" style="margin-top:25px;">
