[#4] Added pre-auth decorator to secure APIs

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -34,7 +34,7 @@
                             <div *ngIf="transaction.amount >= (budget.amount * 0.60) && transaction.amount <= (budget.amount * 0.90)" class="budgetStatus"
                             style="background-color: rgb(85, 194, 91);" [ngStyle]="{'width' : transaction.amount / (budget.amount * 100) * 10000 + '%'}">&nbsp;</div>
                             <div *ngIf="transaction.amount >= (budget.amount * 0.90)" class="budgetStatus"
-                                style="background-color: #f3aaa1;" [ngStyle]="{'width' : transaction.amount / (budget.amount * 100) * 10000 + '%'}">&nbsp;</div>
+                                style="background-color: #fcb3ab;" [ngStyle]="{'width' : transaction.amount / (budget.amount * 100) * 10000 + '%'}">&nbsp;</div>
                         </div>
                     </div>
                 </div>
