--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,8 @@ button {
     color: white;
     background-color: green;
     border: 1px solid green;
-    font-weight: 200;
+    font-family: 'Urbanist', sans-serif;
+    font-weight: 400;
     padding: .2em .6em;
     letter-spacing: 1px;
 }
@@ -47,6 +48,12 @@ button {
     color: rgb(90, 90, 90);
     font-size: 18px;
     font-weight: 500;
+}
+
+.budgetTable .money {
+  font-family: 'Kanit', sans-serif;
+  color: rgb(90, 90, 90);
+  font-weight: 300 !important;
 }
 
 h1 {
